--- a/compose.yaml
+++ b/compose.yaml
@@ -10,3 +10,19 @@ services:
       watch:
         - action: rebuild
           path: .
+
+  python-app:
+    image: python:3.9
+    command: python -c "print('Hello from Python!')"
+
+  node-app:
+    image: node:18
+    command: node -e "console.log('Hello from Node.js!')"
+
+  nginx:
+    image: nginx:latest
+    command: [ "nginx", "-g", "daemon off;" ]
+
+  alpine:
+    image: alpine:latest
+    command: echo "Hello from Alpine!"
